--- a/WordWideWeb.html
+++ b/WordWideWeb.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    
+
     <!-- La deuxième page -->
     <blockquote>
         <blockquote>
@@ -17,7 +17,8 @@
                 <h2>World Wide Web</h2>
 
                 <p>
-                    Le <strong>World Wide Web</strong>(litt. la « toile (d’araignée) mondiale », abrégé www ou le Web), le réseau
+                    Le <strong>World Wide Web</strong>(litt. la « toile (d’araignée) mondiale », abrégé www ou le Web),
+                    le réseau
                     mondial ou la Toile, est un système hypertexte public fonctionnant sur Internet. Le Web permet
                     de consulter, avec un navigateur, des pages accessibles sur des sites. L’image de la toile
                     d’araignée vient des hyperliens qui lient les pages web entre elles.
@@ -36,18 +37,17 @@
                 </p><br>
 
                 <div>
-                    <em>
+                    <blockquote>
                         <blockquote>
                             <blockquote>
-                                <blockquote>
+                                <cite>
                                     Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il
-                                    ait un
-                                    effet social – aider les gens à travailler ensemble – et non comme un jouet
-                                    technologique. — Tim Berners-Lee, Weaving the Web, 1999
-                                </blockquote>
+                                    ait un effet social – aider les gens à travailler ensemble – et non comme un jouet
+                                    technologique. — Tim Berners-Lee, Weaving the Web, 1999.
+                                </cite>
                             </blockquote>
                         </blockquote>
-                    </em>
+                    </blockquote>
                 </div><br><br><br>
 
                 <blockquote>
