--- a/WordWideWeb.html
+++ b/WordWideWeb.html
@@ -11,73 +11,64 @@
 <body>
 
     <!-- La deuxième page -->
-    <blockquote>
+
+    <h1>World Wide Web</h1>
+
+    <p>
+        Le <strong>World Wide Web</strong>(litt. la « toile (d’araignée) mondiale », abrégé www ou le Web),
+        le réseau
+        mondial ou la Toile, est un système hypertexte public fonctionnant sur Internet. Le Web permet
+        de consulter, avec un navigateur, des pages accessibles sur des sites. L’image de la toile
+        d’araignée vient des hyperliens qui lient les pages web entre elles.
+    </p>
+
+    <p>
+        Le Web n’est qu’une des applications d’Internet <a href="./histoire.html">[lien vers la page
+            Histoire
+            d’Internet]</a>, distincte
+        d’autres applications comme le courrier électronique, la messagerie instantanée et le partage
+        de fichiers en pair à pair. Le Web est inventé le 12 mars 1989 au CERN, à Meyrin, près de
+        Genève par Tim Berners-Lee et le Belge Robert Cailliau plusieurs années après Internet. C'est
+        également le Web qui a rendu les médias grand public attentifs à Internet. Depuis, le Web est
+        fréquemment confondu avec Internet ; en particulier, le mot Toile est souvent utilisé dans les
+        textes non techniques sans qu'il soit clair si l'auteur désigne le Web ou Internet.
+    </p><br>
+
+    <div>
         <blockquote>
-            <blockquote>
-                <h2>World Wide Web</h2>
+            <cite>
+                Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il
+                ait un effet social – aider les gens à travailler ensemble – et non comme un jouet
+                technologique. — Tim Berners-Lee, Weaving the Web, 1999.
+            </cite>
+        </blockquote>
+    </div><br><br><br>
 
-                <p>
-                    Le <strong>World Wide Web</strong>(litt. la « toile (d’araignée) mondiale », abrégé www ou le Web),
-                    le réseau
-                    mondial ou la Toile, est un système hypertexte public fonctionnant sur Internet. Le Web permet
-                    de consulter, avec un navigateur, des pages accessibles sur des sites. L’image de la toile
-                    d’araignée vient des hyperliens qui lient les pages web entre elles.
-                </p>
+    <figure>
+        <img src="./Img/c9c7d768-d97e-4d6d-b072-23d9a9272717.svg" alt="" width="700" height="500">
+        <figcaption>Fig 1 : Logo historique du World Wide Web par Robert Cailliau.</figcaption>
+    </figure><br>
 
-                <p>
-                    Le Web n’est qu’une des applications d’Internet <a href="./histoire.html">[lien vers la page
-                        Histoire
-                        d’Internet]</a>, distincte
-                    d’autres applications comme le courrier électronique, la messagerie instantanée et le partage
-                    de fichiers en pair à pair. Le Web est inventé le 12 mars 1989 au CERN, à Meyrin, près de
-                    Genève par Tim Berners-Lee et le Belge Robert Cailliau plusieurs années après Internet. C'est
-                    également le Web qui a rendu les médias grand public attentifs à Internet. Depuis, le Web est
-                    fréquemment confondu avec Internet ; en particulier, le mot Toile est souvent utilisé dans les
-                    textes non techniques sans qu'il soit clair si l'auteur désigne le Web ou Internet.
-                </p><br>
 
-                <div>
-                    <blockquote>
-                        <blockquote>
-                            <blockquote>
-                                <cite>
-                                    Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il
-                                    ait un effet social – aider les gens à travailler ensemble – et non comme un jouet
-                                    technologique. — Tim Berners-Lee, Weaving the Web, 1999.
-                                </cite>
-                            </blockquote>
-                        </blockquote>
-                    </blockquote>
-                </div><br><br><br>
+    <h2>Spécifications</h2>
+    <h3>Abréviations</h3>
+    <p>Le World Wide Web est désigné par de nombreux noms et abréviations synonymes :</p>
+    <ul>
+        <li><em>WorldWideWeb</em></li>
+        <li><em>World Wide Web</em></li>
+        <li><em>WorldWideWeb</em></li>
+        <li><em>World-Wide Web</em></li>
+        <li><em>Web</em></li>
+        <li><em>WWW</em></li>
+        <li><em>W3</em></li>
+        <li><em>Toile d’araignée mondiale</em></li>
+        <li><em>Toile mondiale</em></li>
+        <li><em>Toile</em></li>
+    </ul>
 
-                <blockquote>
-                    <blockquote>
-                        <blockquote>
-                            <img src="./Img/c9c7d768-d97e-4d6d-b072-23d9a9272717.svg" alt="" width="700" height="500">
-                        </blockquote>
-                    </blockquote>
-                </blockquote>
-                <p>Fig 1 : Logo historique du World Wide Web par Robert Cailliau.</p><br>
-
-                <h3>Spécifications</h3>
-                <h4>Abréviations</h4>
-                <p>Le World Wide Web est désigné par de nombreux noms et abréviations synonymes :</p>
-                <ul>
-                    <li><em>WorldWideWeb</em></li>
-                    <li><em>World Wide Web</em></li>
-                    <li><em>WorldWideWeb</em></li>
-                    <li><em>World-Wide Web</em></li>
-                    <li><em>Web</em></li>
-                    <li><em>WWW</em></li>
-                    <li><em>W3</em></li>
-                    <li><em>Toile d’araignée mondiale</em></li>
-                    <li><em>Toile mondiale</em></li>
-                    <li><em>Toile</em></li>
-                </ul>
-
-                <h4>La première page Web</h4>
-                <p>Voici le code de la première page Web :</p>
-                <pre>
+    <h3>La première page Web</h3>
+    <p>Voici le code de la première page Web :</p>
+    <pre>
 &lt;HEADER&gt;
 &lt;TITLE&gt;The World Wide Web project&lt;/TITLE&gt;
 &lt;NEXTID N="55"&gt;
@@ -152,9 +143,6 @@ anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt;
 &lt;/DL&gt;
 &lt;/BODY&gt;
 </pre>
-            </blockquote>
-        </blockquote>
-    </blockquote>
 </body>
 
 </html>
