--- a/histoire.html
+++ b/histoire.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
-    
+
     <!-- La première page -->
     <blockquote>
         <blockquote>
             <blockquote>
-                <h2>Histoire de l'internet</h2>
+                <h1>Histoire de l'internet</h1>
                 <p>
-                    L'<strong>histoire de l'internet</strong> remonte au dévéloppement des premeiers réseaux de télécommunication.
+                    L'<strong>histoire de l'internet</strong> remonte au dévéloppement des premeiers réseaux de
+                    télécommunication.
                     L’idée d’un réseau informatique, permettant aux utilisateurs de différents ordinateurs de
                     communiquer, se développa par de nombreuses étapes successives. La somme de tous ces
                     développements conduisit au « réseau des réseaux » <em>(network of networks)</em> que nous
@@ -41,7 +42,7 @@
                     la bulle Internet.
                 </p>
 
-                <h3>Chronologie sélective</h3>
+                <h2>Chronologie sélective</h2>
                 <table>
                     <thead>
                         <tr>
@@ -209,13 +210,16 @@
                         </tr>
                     </tbody>
                 </table><br>
-                <img src="./Img/113cd572-69cb-46ca-a07c-d44b712b8031.jpg" alt="" width="1024" height="700">
-                <p>
-                    Fig.1 - Le premier serveur web, actuellement au musée du CERN, étiqueté « <em>This machine is a
+                <figure>
+                    <img src="./Img/113cd572-69cb-46ca-a07c-d44b712b8031.jpg" alt="" width="950" height="700"><br>
+                    <figcaption>
+                        Fig.1 - Le premier serveur web, actuellement au musée du CERN, étiqueté « <em>This machine is a
                         server. DO NOT POWER IT DOWN!!</em> »
-                </p><br>
+                    </figcaption>
 
-                <h3>Protocole TCP/IP</h3>
+                </figure>
+
+                <h2>Protocole TCP/IP</h2>
                 <p>
                     L'abondante diversité des méthodes de communications réseau amena un besoin
                     d'uniformisation. Robert E. Kahn recruta Vinton G. Cerf de l'université Stanford dans le but de
@@ -234,9 +238,7 @@
                     financer le développement du logiciel prototype, et après plusieurs années de travail, la
                     première démonstration quelque peu rustique de ce qu'était alors devenu le TCP/IP eut lieu en
                     juillet 1977. Cette nouvelle méthode se répandit au travers des réseaux, et le 1
-                    er
-                    janvier 1983
-                    les protocoles TCP/IP devenaient officiellement le seul protocole sur l'ARPANET, remplaçant le
+                    <sup>er</sup> janvier 1983 les protocoles TCP/IP devenaient officiellement le seul protocole sur l'ARPANET, remplaçant le
                     précédent protocole NCP2.
                 </p>
             </blockquote>
