--- a/WordWideWeb.html
+++ b/WordWideWeb.html
@@ -69,6 +69,7 @@
     <h3>La première page Web</h3>
     <p>Voici le code de la première page Web :</p>
     <pre>
+        <code>
 &lt;HEADER&gt;
 &lt;TITLE&gt;The World Wide Web project&lt;/TITLE&gt;
 &lt;NEXTID N="55"&gt;
@@ -142,6 +143,7 @@ NAME=49 HREF="LineMode/Defaults/Distribution.html"&gt;
 anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt;
 &lt;/DL&gt;
 &lt;/BODY&gt;
+    </code>
 </pre>
 </body>
 
