Modification de la balise cite

--- a/WordWideWeb.html
+++ b/WordWideWeb.html
@@ -36,11 +36,11 @@
 
     <div>
         <blockquote>
-            <cite>
+            <em>
                 Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il
                 ait un effet social – aider les gens à travailler ensemble – et non comme un jouet
-                technologique. — Tim Berners-Lee, Weaving the Web, 1999.
-            </cite>
+                technologique. — Tim Berners-Lee, <cite>Weaving the Web</cite> , 1999.
+            </em>
         </blockquote>
     </div><br><br><br>
 
